# BezierFastExploration

./: CMakeLists.txt  README.md  package.xml  visu.rviz
include/bezier_exploration/: bezier_exploration.hpp
launch/: exploration.launch
msg/: BezierTraj.msg  TreeNode.msg  gpMsgs.msg
src/: bezier_exploration.cpp  bezier_exploration_node.cpp  bezier_exploration_test.cpp  bezier_exploration_test_real.cpp  gain_evaluator.cpp  gain_regressor.py  map_evaluator.cpp
srv/: GetGain.srv  InitService.srv
